more space in TileFX + fix tests